<resources>
    <string name="app_name">FirstLab</string>
    <string name="facebook_app_id">2010438729262025</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>

    <string name="mobile">mobile </string>

    <string name="message">message</string>
    <string name="next">next</string>
    <string name="close">close</string>

    <string name="firstRow">firstRow</string>
    <string name="secondRow">secondRow</string>
    <string name="thirdRow">thirdRow</string>
    <string name="forthRow">forthRow</string>

    <string name="firstcol">firstcol</string>
    <string name="secondcol">secondcol</string>
    <string name="thirdcol">thirdcol</string>
    <string name="forthcol">forthcol</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
